--- a/ExpenseTracker/template/expense/insight.html
+++ b/ExpenseTracker/template/expense/insight.html
@@ -4,42 +4,48 @@
 
 <link rel="stylesheet" href="{% static 'css/pagescss/insight.css'%}" />
 
-<h1>Insights</h1>
 
 <div class="jumbotron">
         <div class="row w-100">
                 <div class="col-md-3">
                     <div class="card border-info mx-sm-1 p-3">
-                        <div class="card border-info shadow text-info p-3 my-card" ><span class="fa fa-car" aria-hidden="true"></span></div>
+                        <div class="card border-info shadow text-info p-3 my-card" ><span class="fa fa-unlock21
+                          ." aria-hidden="true"></span></div>
                         <div class="text-info text-center mt-3"><h4>Total Amount</h4></div>
-                        <div class="text-info text-center mt-2"><h1>234</h1></div>
+                        <div class="text-info text-center mt-2"><h1>£{{Amounts}}</h1></div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card border-success mx-sm-1 p-3">
-                        <div class="card border-success shadow text-success p-3 my-card"><span class="fa fa-eye" aria-hidden="true"></span></div>
+                        <div class="card border-success shadow text-success p-3 my-card"><span class="fa fa-users" aria-hidden="true"></span></div>
                         <div class="text-success text-center mt-3"><h4>Active Users</h4></div>
                         <div class="text-success text-center mt-2"><h1>{{Users}}</h1></div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card border-danger mx-sm-1 p-3">
-                        <div class="card border-danger shadow text-danger p-3 my-card" ><span class="fa fa-heart" aria-hidden="true"></span></div>
+                        <div class="card border-danger shadow text-danger p-3 my-card" ><span class="fa fa-bars" aria-hidden="true"></span></div>
                         <div class="text-danger text-center mt-3"><h4>Catagories</h4></div>
-                        <div class="text-danger text-center mt-2"><h1>346</h1></div>
+                        <div class="text-danger text-center mt-2"><h1>{{Catagories}}</h1></div>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="card border-warning mx-sm-1 p-3">
                         <div class="card border-warning shadow text-warning p-3 my-card" ><span class="fa fa-inbox" aria-hidden="true"></span></div>
-                        <div class="text-warning text-center mt-3"><h4>Inbox</h4></div>
-                        <div class="text-warning text-center mt-2"><h1>346</h1></div>
+                        <div class="text-warning text-center mt-3"><h4>My Total Spendings</h4></div>
+                        <div class="text-warning text-center mt-2"><h1>£{{MySpending}}</h1></div>
                     </div>
                 </div>
              </div>
         </div>
 
-<div id="container" data-url="{% url 'pie_chart_insight' %}"></div>
+        <div class="piecard" >
+            <div class="card border-primary mb-3" >
+          <div class="card-body">
+              <div id="container" data-url="{% url 'pie_chart_insight' %}"></div>
+            </div>
+          </div>
+        </div>
 
 <script>
     $.ajax({
@@ -51,7 +57,14 @@
     });
   </script>
 
-  <div id="container1" data-url="{% url 'line_chart_insight' %}"></div>
+  <div class="linecard" >
+      <div class="card border-primary mb-3" >
+    <div class="card-body">
+        <div id="container1" data-url="{% url 'line_chart_insight' %}"></div>
+      </div>
+    </div>
+  </div>
+
 
   <script>
       $.ajax({
