--- a/ExpenseTracker/template/expense/insight.html
+++ b/ExpenseTracker/template/expense/insight.html
@@ -9,8 +9,7 @@
         <div class="row w-100">
                 <div class="col-md-3">
                     <div class="card border-info mx-sm-1 p-3">
-                        <div class="card border-info shadow text-info p-3 my-card" ><span class="fa fa-unlock21
-                          ." aria-hidden="true"></span></div>
+                        <div class="card border-info shadow text-info p-3 my-card" ><span class="fa fa-gbp" aria-hidden="true"></span></div>
                         <div class="text-info text-center mt-3"><h4>Total Amount</h4></div>
                         <div class="text-info text-center mt-2"><h1>£{{Amounts}}</h1></div>
                     </div>
@@ -31,7 +30,7 @@
                 </div>
                 <div class="col-md-3">
                     <div class="card border-warning mx-sm-1 p-3">
-                        <div class="card border-warning shadow text-warning p-3 my-card" ><span class="fa fa-inbox" aria-hidden="true"></span></div>
+                        <div class="card border-warning shadow text-warning p-3 my-card" ><span class="fa fa-money" aria-hidden="true"></span></div>
                         <div class="text-warning text-center mt-3"><h4>My Total Spendings</h4></div>
                         <div class="text-warning text-center mt-2"><h1>£{{MySpending}}</h1></div>
                     </div>
