--- a/ExpenseTracker/template/partials/navbar.html
+++ b/ExpenseTracker/template/partials/navbar.html
@@ -1,4 +1,7 @@
+{% load static%}
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <img src="{% static 'img/expense.png' %}"  class="rounded" alt="Cinque Terre" style="width: 50px;">
+
     <a class="navbar-brand" href="#">Expense Tracker</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -7,8 +10,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         {% if user.is_authenticated %}
 
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav ml-auto">
         <li class="nav-item">
+   
+
           <a class="nav-link" href="{% url 'home' %}">Dashboard <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
@@ -20,6 +25,7 @@
         <li class="nav-item">
             <a class="nav-link" href="{% url 'friends' %}">Friends</a>
           </li>
+          
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Hi {{user.get_full_name }}
